Updated the Crawler implementation